# write-ai

./: LANGUAGE_FEATURE.md  next.config.ts  package-lock.json  package.json
app/: globals.css  hero.ts  layout.tsx  page.tsx  providers.tsx
app/api/ai-proxy/: route.ts
app/components/: SettingsModal.tsx  TitleSelector.tsx
app/config/: languageConfig.ts
app/services/: aiService.ts
app/store/: articleStore.ts
app/types/: index.ts
app/utils/: contentUtils.ts  optionsHelper.ts  promptGenerator.ts  tauriImports.ts
components/: providers.tsx
components/content/: ArticleDisplay.tsx  ArticleTags.tsx  TitleSelector.tsx
components/editor/: ArticleOptions.tsx  GenerateButton.tsx  KeywordInput.tsx  LanguageSelector.tsx
components/layout/: MainContent.tsx  Sidebar.tsx
config/: articleOptions.ts
docs/: API_ROUTE_FIX.md  BAD_REQUEST_CHECKLIST.md  BUG_FIXES_SUMMARY.md  BUILD_STATUS.md  CORS_SOLUTION.md  DEBUG_API_PROXY.md  ENVIRONMENT_CONFIG.md  FINAL_SUMMARY.md  IMPLEMENTATION.md  MIGRATION_SUMMARY.md  NETWORK_FIX.md  PERSISTENCE_STATUS.md  PERSISTENCE_TEST.md  PROXY.md  QUICK_FIX_CORS.md  README.md  REFACTORING_SUMMARY.md  TAURI_DOWNLOAD_DEBUG.md  TAURI_IMPORT_FIX.md  TAURI_MIGRATION.md  TAURI_USAGE.md  TOKIO_VERSION_FIX.md  TROUBLESHOOTING.md  Tauri + Next.js 桌面端授权系统.md  prompt.md  test-api-proxy.js  test-tauri-proxy.js
hooks/: useArticleGenerator.ts  useCopyActions.ts  useHistoryManager.ts  useKeywordInput.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+13 files in other folders)
